# Onyx

./: .env.example  .gitignore  BUILD_STATE.md  OPEN_QUESTIONS.md  PRIVATE_PAYMENTS_CUSTODY_ANALYSIS.md  README.md  SECURITY_AUDIT.md  package.json  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml
app/: .env.example  .gitignore  next.config.mjs  package.json  tailwind.config.ts
app/scripts/: amm_base_lifecycle.ts  amm_browser_proof.ts  amm_er_lifecycle.ts  check-wallet.ts  er_browser_error_paths.ts  er_browser_final_withdraw.ts  er_browser_proof.ts  er_browser_proof_resume.ts  (+10 more)
deploy/: deploy.sh
docs/: AMM_TRADING_DESIGN.md  DEPLOYMENT.md  ER_TRADING_DESIGN.md  PER_ANALYSIS.md  SESSION_TRADING.md
programs/onyx/: Cargo.toml
programs/onyx/src/: amm_lifecycle_tests.rs  constants.rs  entrypoint.rs  error.rs  fpmm.rs  lib.rs  matching.rs  merkle.rs  util.rs
programs/onyx/src/cpi/: delegation.rs  permission.rs  txoracle.rs
programs/onyx/src/instructions/: cancel_order_fast.rs  claim.rs  create_amm_pool.rs  create_market_permission.rs  delegate_amm_pool.rs  delegate_amm_position.rs  delegate_market.rs  delegate_trading_account.rs  deposit_amm.rs  deposit_trading.rs  initialize_config.rs  join_market.rs  mod.rs  open_amm_position.rs  open_market.rs  open_market_sealed.rs  open_trading_account.rs  process_undelegation.rs  redeem_amm.rs  refund_expired.rs  refund_unrevealed.rs  reveal_order.rs  reveal_order_fast.rs  run_batch_match.rs  run_batch_match_fast.rs  settle_market.rs  submit_order_fast.rs  submit_sealed_order.rs  swap_amm.rs  touch_market.rs  undelegate_market.rs  undelegate_trading_account.rs  withdraw_lp_amm.rs  withdraw_trading.rs
programs/onyx/src/state/: amm_pool.rs  amm_position.rs  config.rs  market.rs  mod.rs  position.rs  sealed_order.rs  trading_account.rs
scripts/: run-demo.sh
(+125 files in other folders)
